--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
     "jwt-simple": "^0.5.6",
+    "module-name": "0.0.1-security",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nestjs-socket.io-client": "^1.0.6",
