--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "watch": [
+      "dist"
+    ],
     "include": [
       "src/**/*"
     ],
