--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "watch": [
-      "dist"
+      "src"
     ],
     "include": [
       "src/**/*"
