--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,18 +11,6 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "include": [
-      "src/**/*"
-    ],
-    "exclude": [
-      "node_modules",
-      "src"
-    ]
+    "skipLibCheck": true
   }
 }
