--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,21 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true,
     "paths": {
+      "@modules/*": [
+        "src/modules/*.module.ts",
+      ],
       "@entities/*": [
-        "src/user/entities/*.entity.ts"
+        "src/user/entities/*.entity.ts",
       ]
     }
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
