--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
+    "express-ip": "^1.0.4",
     "jwt-simple": "^0.5.6",
     "module-name": "0.0.1-security",
     "moment": "^2.29.4",
