--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "paths": {
       "@modules/*": [
         "src/modules/*.module.ts",
+      ],
+      "@entities/*": [
+        "src/user/entities/*.entity.ts",
       ]
     }
   },
