--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "moduleResolution": "node",
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
