pruebas errro compilacion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,13 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "moduleResolution": "node",
-    "target": "es6",
+    "target": "es2018",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "paths": {
-      "@modules/*": [
-        "src/modules/*.module.ts",
-      ],
-    }
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules"
