--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "es2018",
     "sourceMap": true,
     "outDir": "./dist",
-    "strict": true,
+    "strict": false,
     "noImplicitAny": true,
     "esModuleInterop": true
   },
